

Enemies & Bosses:

-Added pitch variance to various custom enemy and boss sounds in the mod
-Lowered the orange spooky ghost critter spawnrate
-Lowered the spawn rate of the gloopers in the cemetery
-Nerfed giant tortumor contact damage from 65 to 40
-Added new sprites for big bone's thorn attacks to make them look better
-Defeating big bone will now automatically unlock the catacomb guardian's bestiary entry
-Made orro & boro's thorn pillars taller
-Added a new visual effect for boro's acid breath attack
-Moco, orro, and boro will now drop one sentient heart for each active player in the world the first time you defeat them, instead of only one
-Added a new spawn intro for rot gourd when he is summoned
-Added new sound effects for the cowbell entity


Miscellaneous:

-Spooky mod's pylons now give off colored lighting like vanilla ones do
-The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons
-Resprited the spooky forest and swampy cemetery backgrounds to make them look better
-Added better player following AI for the fuzz bat pet
-Removed the following enemies from the mod: haunted skull, distended, distended brute, capillary, visitant
-Eye valley grass can now grow the ambient eye stalks and tentacles naturally




~BUGS AND OTHER FIXES~

-Fixed the spooky scroll causing the player sprite direction to spaz out if your cursor was in the middle of your player
-Fixed both regular tortumor and giant tortumor's orb projectiles not dealing any damage
-Fixed issue where spooky mod's custom tile drawing would draw horrible wrong if you are using retro or trippy lighting
-Fixed bug where the eye valley biome chest was dropping a monster chest when broken, and not its own placeable item
-Fixed rot gourd not spawning with flies correctly in multiplayer
-Fixed spooky spirit vanishing when hit in multiplayer

