@@ -346,8 +346,10 @@ namespace Spooky.Content.NPCs.Boss.BigBone
 
             Color color = Color.Lerp(Color.Transparent, Color.White, fade);
 
+            //draw big bone's antler glowmask
             Main.EntitySpriteDraw(tex, NPC.Center - Main.screenPosition + new Vector2(0, NPC.gfxOffY + 4), null, color, NPC.rotation, NPC.frame.Size() / 2f, NPC.scale, effects, 0);
 
+            //draw solar forcefield
             if (NPC.ai[0] == -1 && NPC.CountNPCS(ModContent.NPCType<BigFlower>()) > 0)
             {
                 Main.spriteBatch.End();
@@ -356,7 +358,7 @@ namespace Spooky.Content.NPCs.Boss.BigBone
                 var center = NPC.Center - Main.screenPosition + new Vector2(0, NPC.gfxOffY);
                 float intensity = fade;
                 DrawData drawData = new DrawData(ModContent.Request<Texture2D>("Spooky/ShaderAssets/BigBoneShield").Value, center - new Vector2(0, -55), 
-                new Rectangle(0, 0, 500, 400), Color.Orange, 0, new Vector2(250f, 250f), NPC.scale * (1f + intensity * 0.05f), SpriteEffects.None, 0);
+                new Rectangle(0, 0, 500, 400), Color.Lerp(Color.Gold, Color.OrangeRed, fade), 0, new Vector2(250f, 250f), NPC.scale * (1f + intensity * 0.05f), SpriteEffects.None, 0);
                 GameShaders.Misc["ForceField"].UseColor(new Vector3(1f + intensity * 0.5f));
                 GameShaders.Misc["ForceField"].Apply(drawData);
                 drawData.Draw(Main.spriteBatch);
