@@ -1,4 +1,4 @@
-TheEntity: "[Information Redacted]"
+TheMan: "[Information Redacted]"
 TheBaby: It won't stop crying...
 TheHorse: Are you still hungry now?
 BigBone: The long lost brother of little bone who is trapped away in the catacombs due to his immense power. His floral magicks have taken over the catacombs, spreading strange plant life all throughout.
