@@ -1,3 +1,2 @@
 BiomassExplosion: was exploded by Biomatter.
 VesicatorExplosion: was exploded by Vesicator.
-EntityDeath: was [REDACTED].
