@@ -72,8 +72,8 @@ OrroBodyP1.DisplayName: Orro
 OrroHeadP1.DisplayName: Orro
 OrroTail.DisplayName: Orro
 PhantomSkull.DisplayName: Phantom Skull
-//entities
-TheEntity.DisplayName: The Entity
+//hallucinations
+TheMan.DisplayName: The Man
 TheBaby.DisplayName: The Baby
 TheHorse.DisplayName: The Horse
 //catacombs
